--- a/02_azure-pipelines-ci.yml
+++ b/02_azure-pipelines-ci.yml
@@ -48,7 +48,7 @@ jobs:
     displayName: 'Prepare analysis on SonarCloud'
     inputs:
       SonarCloud: SonarCloud
-      organization: jbouzouidevops
+      organization: jbouzouitadevops
       projectKey: WebAppWithDatabaseDemo
   
   - task: DotNetCoreCLI@2
