--- a/02_azure-pipelines-ci.yml
+++ b/02_azure-pipelines-ci.yml
@@ -49,7 +49,7 @@ jobs:
     inputs:
       SonarCloud: SonarCloud
       organization: jbouzouitadevops
-      projectKey: WebAppWithDatabaseDemo
+      projectKey: webappwithdatabase
   
   - task: DotNetCoreCLI@2
     displayName: Build
