Update 02_azure-pipelines-ci.yml for Azure Pipelines

--- a/02_azure-pipelines-ci.yml
+++ b/02_azure-pipelines-ci.yml
@@ -49,7 +49,7 @@ jobs:
     inputs:
       SonarCloud: SonarCloud
       organization: jbouzouitadevops
-      projectKey: webappwithdatabase
+      projectKey: WebAppWithDatabaseDemo
   
   - task: DotNetCoreCLI@2
     displayName: Build
