--- a/03_azure-pipelines-ci-cd.yml
+++ b/03_azure-pipelines-ci-cd.yml
@@ -80,8 +80,8 @@ stages:
       displayName: Prepare analysis on SonarCloud
       enabled: ${{ parameters.runCompletePipeline }}
       inputs:
-        SonarCloud: SonarCloud
-        organization: houssemdellai
+        SonarCloud: SonarConnection
+        organization: jbouzouita
         projectKey: WebAppWithDatabaseDemo
 
     - task: DotNetCoreCLI@2
@@ -123,7 +123,7 @@ stages:
   - job: Database
     displayName: Build Database
     pool:
-      vmImage: 'windows-2019'
+      vmImage: 'windows-latest'
       demands: msbuild
     steps:
 
@@ -141,7 +141,7 @@ stages:
   - job: Selenium
     displayName: Build UI Tests
     pool:
-      vmImage: 'windows-2019'
+      vmImage: 'windows-latest'
       demands: msbuild
 
     steps:
@@ -197,7 +197,7 @@ stages:
   - job: Create_DEV
     displayName: Create DEV
     pool:
-      vmImage: 'windows-2019'
+      vmImage: 'windows-latest'
     steps:
 
     - checkout: none
