--- a/02_azure-pipelines-ci.yml
+++ b/02_azure-pipelines-ci.yml
@@ -64,9 +64,13 @@ jobs:
       projects: '**/*UnitTest*.csproj'
       arguments: '--configuration $(BuildConfiguration)'
   
-
-  
-
+  - task: DotNetCoreCLI@2
+    displayName: Publish
+    inputs:
+      command: publish
+      publishWebProjects: True
+      arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
+      zipAfterPublish: True
 
 - job: Database
   displayName: 'Build Database'
