--- a/02_azure-pipelines-ci.yml
+++ b/02_azure-pipelines-ci.yml
@@ -8,7 +8,7 @@ jobs:
 - job: WebApp
   displayName: 'Build Web App'
   pool:
-    vmImage: 'windows-latest'
+    vmImage: 'windows-2019'
   variables:
     BuildConfiguration: release
   
@@ -43,13 +43,17 @@ jobs:
     workingDirectory: WebApp
     displayName: 'PS : Add Project GUID'
     enabled: false
-    
+  
   - task: SonarCloudPrepare@3
     inputs:
       SonarQube: 'sonarConnection'
       organization: 'jbouzouitadevops'
+      scannerMode: 'dotnet'
       projectKey: 'WebAppWithDatabaseDemo'
-      projectName: 'webappwithdatabase'
+  - task: PublishBuildArtifacts@1
+    displayName: 'Publish Artifact (WebApp.zip)'
+    inputs:
+      PathtoPublish: '$(build.artifactstagingdirectory)'
   
   - task: DotNetCoreCLI@2
     displayName: Build
@@ -71,11 +75,22 @@ jobs:
       publishWebProjects: True
       arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
       zipAfterPublish: True
+  
+  - task: SonarCloudAnalyze@1
+    displayName: 'Run Code Analysis'
+  
+  - task: SonarCloudPublish@1
+    displayName: 'Publish Quality Gate Result'
+  
+  - task: PublishBuildArtifacts@1
+    displayName: 'Publish Artifact (WebApp.zip)'
+    inputs:
+      PathtoPublish: '$(build.artifactstagingdirectory)'
 
 - job: Database
   displayName: 'Build Database'
   pool:
-    vmImage: 'windows-latest'
+    vmImage: 'windows-2019'
 
   steps:
   - task: MSBuild@1
